crates/ao-tui/tests/snapshots/test_agent_dialog__agent_dialog_tools_focused.snap
---
source: crates/ao-tui/tests/test_agent_dialog.rs
expression: output
---
" AspireOrchestrator (Rust)                                                      "
"┌ Slots ───────────────────┐┌ Details ─────────────────────────────────────────┐"
"│>  auth  ■ ○  feature/auth││  Branch     feature/auth                         │"
"│                          ││  Status     Ready                                │"
"│                          ││  Agent      None                                 │"
"│                          ││                                                  │"
"│           ┌ Spawn Agent - auth ──────────────────────────────────┐           │"
"│           │                                                      │           │"
"│           │ Prompt:                                              │───────────┘"
"│           │                                                      │───────────┐"
"│           │                                                      │           │"
"│           │ ──────────────────────────────────────────────────── │           │"
"│           │                                                      │           │"
"│           │ ──────────────────────────────────────────────────── │           │"
"│           │ Max Turns (optional):                                │           │"
"│           │                                                      │           │"
"│           │                                                      │           │"
"│           └──────────────────────────────────────────────────────┘           │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
"                                                                                "
"[N]ew [S]tart [K]ill [D]estroy [A]gent [R]ebase [G]push [P]term [L]og [M]ultiple"
